Fix subnavbar floating, home page navbar wrapping
Also,
- Change `rgba(r, g, b, a)` colors to new `rgb(r g b / a)` syntax
- Eliminate git conflict
- Remove `.idea`

--- a/CSS/primaryStyle.css
+++ b/CSS/primaryStyle.css
@@ -5,10 +5,9 @@ html, body {
     padding: 0px;
     margin: 0px;
     font-size: 17px;
-    /*font-family: 'Open Sans', sans-serif;*/
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    color: rgb(0, 0, 0);
+    color: rgb(0 0 0);
     scroll-behavior:smooth;
 }
 
@@ -34,7 +33,7 @@ p:last-child{
 }
 
 a {
-    color: rgb(240, 10, 10);
+    color: rgb(240 10 10);
     text-decoration: none;
     -webkit-transition: 0.25s;
     -moz-transition: 0.25s;
@@ -42,7 +41,7 @@ a {
 }
 
 a:hover{
-    color: rgb(180, 10, 10);
+    color: rgb(180 10 10);
 }
 
 /* Wrappers */
@@ -56,7 +55,7 @@ a:hover{
 
 #navigation-wrapper{
     border-style: none none solid none;
-    border-color: rgb(255, 255, 255);
+    border-color: rgb(255 255 255);
     border-width: 4px;
     text-transform: capitalize;
 }
@@ -99,7 +98,7 @@ a:hover{
 /* General Text Formatting */
 .title{
     display: block;
-    color: rgb(240, 10, 10);
+    color: rgb(240 10 10);
 }
 
 .bold{
@@ -108,14 +107,14 @@ a:hover{
 
 .button-red{
     color: #fff;
-    background-color:rgb(170,10,10);
-    border-color:rgb(170,10,10);
+    background-color: rgb(170 10 10);
+    border-color: rgb(170 10 10);
 }
 
 .button-gray{
     color: #fff;
-    background-color:rgba(50,50,50,0.5);
-    border-color:rgba(50,50,50,0.5);
+    background-color: rgb(50 50 50 / 0.5);
+    border-color: rgb(50 50 50 / 0.5);
 }
 
 /* General Structuring */
@@ -151,7 +150,7 @@ a:hover{
 }
 .formBody{
     border-width: 8px;
-    border-color: rgba(240, 10, 10, 0.75);
+    border-color: rgb(240 10 10 / 0.75);
     border-style: solid;
     border-radius: 6px;
     display: inline-block;
@@ -220,23 +219,24 @@ a:hover{
     font-size:14px;
     border-width:5px;
     border-left-style:solid;
-    border-color:rgb(170,10,10);
+    border-color: rgb(170 10 10);
     transition:0.3s;
 }
 .sponsor-child:hover{
-    background-color:rgba(170,10,10,0.3);
+    background-color: rgb(170 10 10 / 0.3);
 }
 
 /*Navbar and subNavigation*/
 #navbar {
+    display: flex;
+    justify-content: space-between;
     border-style: none;
     text-align: left;
-    background-color: rgb(117, 10, 10);
-    color: rgba(255, 255, 255, 1);
+    background-color: rgb(117 10 10);
+    color: rgb(255 255 255);
 }
 
 #GRTEmblem {
-    display: inline-block;
     font-size: 26px;
     padding: 0px 0px 0px 20px;
 }
@@ -247,9 +247,6 @@ a:hover{
 
 #navContainer {
     position: relative;
-    display: inline-block;
-    float: right;
-    height: 62px;
 }
 
 ul#navList {
@@ -274,11 +271,11 @@ ul#navList li a {
     height: 100%;
     padding: 15px;
     text-decoration: none;
-    color: rgba(255, 255, 255, 1);
+    color: rgb(255 255 255);
 }
 
 ul#navList li a:hover {
-    background-color: rgb(97, 0, 0);
+    background-color: rgb(97 0 0);
 }
 
 .pointer{
@@ -304,7 +301,7 @@ ul#navList li a:hover {
 /*Sub Navigation for most pages*/
 div.subNavbar{
     text-align: center;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0 0 0);
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
 }
@@ -314,7 +311,7 @@ div.subNavbar:not(.active){
 }
 
 ul.subNavList{
-    display: block;
+    display: flex;
     font-size: 13px;
     height: 100%;
     list-style-type: none;
@@ -331,11 +328,11 @@ ul.subNavList li a {
     display: inline-block;
     padding: 20px;
     text-decoration: none;
-    color: rgba(150, 150, 150, 1);
+    color: rgb(150 150 150);
 }
 
 ul.subNavList li a.active, ul.subNavList li a:hover {
-    color: rgb(255, 255, 255);
+    color: rgb(255 255 255);
 }
 
 
@@ -348,8 +345,8 @@ div#footer-wrapper{
     padding: 20px 0px;
     margin: 0px;
     bottom: -.5px;
-    background-color: rgba(0, 0, 0, 1);
-    color: rgba(220, 220, 220, 1); /*Temporary*/
+    background-color: rgb(0 0 0);
+    color: rgb(220 220 220); /*Temporary*/
 }
 
 /*Testing in progress*/
@@ -442,19 +439,9 @@ div#footer-wrapper{
 
 #imgtext {
     position: absolute;
-<<<<<<< HEAD
     padding: 20px;
     top: 15px;
-    color: rgb(100,100,100);
+    color: rgb(100 100 100);
     font-size: 24px;
     font-weight: bold;
-=======
-    bottom: 15px;
-    left: 15px;
-    color: white;
-    font-size: 20px;
-}
-
-.wrap-image {
->>>>>>> e09ef38d23418047c08d5e98969105ae90a48ecc
 }
